﻿w17 21.10.2014 15:02:24 +0400 - build 4153

1. Уточнение уточнения 4150. 

w17 21.10.2014 14:25:48 +0400 - build 4152

1. Уточнение 4150.

drkns 20.10.2014 21:17:09 +0200 - build 4151

1. #0002841: Зависание FAR

w17 20.10.2014 14:12:09 +0400 - build 4150

1. Смена кодировки файла с перечитыванием в редакторе должна работать через API.

2. При автоопределениии кодировки файла в редакторе (ShiftF8)
   если файл содержит только ASCII коды, подставляется умолчательная кодировка
   (или ACP, если умолчательная - юникод).

shmuel 20.10.2014 00:54:08 +0200 - build 4149

1. M#2838: Артефакт на экране по окончании выполнения макроса.

drkns 19.10.2014 08:47:14 +0200 - build 4148

1. Уточнение 4145.

zg 19.10.2014 03:03:18 +0200 - build 4147

1. убран ненужный код.

zg 19.10.2014 02:28:21 +0200 - build 4146

1. очередные проблемы с табами и раскраской в редакторе.

drkns 19.10.2014 00:25:12 +0200 - build 4145

1. Рефакторинг.

zg 19.10.2014 00:10:02 +0200 - build 4144

1. уточнение 4141.

2. древний баг, когда ECTL_GETINFO, вызванная из EE_REDRAW, возвращало некорректную LeftPos.

svs 18.10.2014 11:00:19 +0400 - build 4143

1. SQLite 3.8.7

w17 18.10.2014 06:15:54 +0300 - build 4142

1. уточнение 4135

zg 18.10.2014 02:39:46 +0200 - build 4141

1. 0002835: Цветомузыка при сдвиге содержимого редактора влево.

drkns 17.10.2014 23:22:14 +0200 - build 4140

1. #0002839: Неправильно ассоциированы названия атрибутов

zg 17.10.2014 14:01:23 +0200 - build 4139

1. уточнение 4137.

zg 17.10.2014 04:06:40 +0200 - build 4138

1. ACTL_GETWINDOWINFO возвращает все окна в порядке текущего z-order'а.

zg 17.10.2014 03:27:45 +0200 - build 4137

1. уточнение 4134: убрана копипаста и удаляются реально все цветовые области.

zg 17.10.2014 01:30:31 +0200 - build 4136

1. при открытии уже открытого файла в редакторе из поиска запрос выводился некорректно.

2. gcc warning.

w17 16.10.2014 02:20:55 +0300 - build 4135

1. M#2829: Пустой экран в вьювере при перезаписи файла
